Se non supero il test non posso accettarlo e non compare nella sezione HR